--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@freelyformd/mq",
   "version": "1.0.0",
   "description": "A sweet syntax wrapper around amqplib",
-  "main": "src/index.js",
+  "main": "src/topic/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
