--- a/package.json
+++ b/package.json
@@ -2,13 +2,35 @@
   "name": "@freelyformd/mq",
   "version": "1.0.0",
   "description": "A sweet syntax wrapper around amqplib",
-  "main": "src/topic/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Ernest Okot",
   "license": "ISC",
+  "main": "src/topic/index.js",
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "scripts": {
+    "compile": "babel src/ -d lib/",
+    "commit": "git add . && git-cz",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "lint": "eslint src",
+    "release": "semantic-release",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "amqplib": "^0.5.2"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-conventional": "^6.1.3",
+    "@semantic-release/git": "^4.0.2",
+    "babel-cli": "^6.26.0",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^4.19.1",
+    "husky": "^0.14.3",
+    "nsp": "^3.2.1",
+    "semantic-release": "^15.1.7"
   }
 }
