--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@commitlint/config-conventional": "^6.1.3",
     "@semantic-release/git": "^4.0.2",
     "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.19.1",
