--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "compile": "babel src/ -d lib/",
+    "compile": "tsc",
     "commit": "git add . && git-cz",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint src",
@@ -28,14 +28,14 @@
     "@commitlint/cli": "^6.1.3",
     "@commitlint/config-conventional": "^6.1.3",
     "@semantic-release/git": "^4.0.2",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@types/amqplib": "^0.5.7",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.19.1",
     "husky": "^0.14.3",
     "nsp": "^3.2.1",
-    "semantic-release": "^15.1.7"
+    "semantic-release": "^15.1.7",
+    "typescript": "^2.8.3"
   },
   "directories": {
     "example": "examples",
