--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "@commitlint/config-conventional": "^6.1.3",
     "@semantic-release/git": "^4.0.2",
     "@types/amqplib": "^0.5.7",
+    "@types/jest": "^22.2.3",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.19.1",
     "husky": "^0.14.3",
+    "jest": "^22.4.3",
     "nsp": "^3.2.1",
     "semantic-release": "^15.1.7",
+    "ts-jest": "^22.4.6",
+    "tslint": "^5.10.0",
     "typescript": "^2.8.3"
   },
   "directories": {
