--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "lint": "eslint src",
     "release": "semantic-release",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "amqplib": "^0.5.2"
