--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@types/amqplib": "^0.5.7",
     "@types/jest": "^22.2.3",
     "commitizen": "^2.9.6",
+    "coveralls": "^3.0.1",
     "cz-conventional-changelog": "^2.1.0",
+    "debug": "^3.1.0",
     "eslint": "^4.19.1",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
