--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ install:
 
 script:
   - yarn run lint
+  - yarn run test
+  - cat ./coverage/lcov.info | npx coveralls
   - yarn run compile
 
 deploy:
