--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "amqplib": "^0.5.2"
+    "amqplib": "^0.5.2",
+    "debug": "^3.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^6.1.3",
     "@commitlint/config-conventional": "^6.1.3",
     "@semantic-release/git": "^4.0.2",
     "@types/amqplib": "^0.5.7",
+    "@types/debug": "^0.0.30",
     "@types/jest": "^22.2.3",
     "commitizen": "^2.9.6",
     "coveralls": "^3.0.1",
     "cz-conventional-changelog": "^2.1.0",
-    "debug": "^3.1.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
     "nsp": "^3.2.1",
