--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ install:
   - yarn
 
 script:
-  - yarn run lint
-  - yarn run test
+  - npm run lint
+  - npm run test
   - cat ./coverage/lcov.info | npx coveralls
-  - yarn run compile
+  - npm run compile
 
 deploy:
   provider: script
